# S-PGO

./: .gitignore  A.txt  B.txt  B_C_inv.txt  B_C_inv_B_T.txt  C.txt  CMakeLists.txt  CUDAmanager.py  CUDAoptimization.py  C_inv.txt  CheckCUDAhessians.py  CheckCudaJacobian.py  ConvegenceTests.py  ConvergenceExamination.py  DepthOptimization.py  DeterministicManager.py  H_schur.txt  J_T.txt  LieUtils.py  Manager.py  Optimizer.py  PoseOnlyOptimization.py  PythonManager.py  PythonOptimization.py  ReadMe  ReadMe.md  Simulator.py  StereoGTSAM.py  TimingTests.ipynb  TimingTests.py  TimingTestsPython.py  VisualizeHessian.py  VisualizeHessians.py  VisualizeOptimization.py  VisualizeTimePerformance.py  deneme.py  g_T.txt  g_a.txt  g_schur.txt  r.txt  (+5 more)
PythonImplementation/: Manager.py  Optimizer.py  visualization_utils.py
PythonUtils/: CheckHessians.py  DepthOptimization.py  DeterministicManager.py  Manager.py  OptimizationLoop.py  Optimizer.py  SceneRenderer.py  Simulator.py  StereoSetup.py  utils.py  visualization_utils.py
build_gp/: Makefile  Solver.cpp  cmake_install.cmake
include/: LMutils.h  Manager.hpp  Solver.hpp  Solver_cuda.h  lie.h  test_utils.h
src/: main.cpp
src/CythonAPI/: Manager.pxd  Manager.pyx  Solver.pxd  Solver.pyx
src/LieUtils/: SE3.cu  utils.cu
src/LiuUtils/: SO3.cu
src/Optimization/: LMutils.cu  Manager.cpp  Solver.cpp  Solver_cuda copy.cu  Solver_cuda.cu  linear_solvers.cu
tests/: main.cpp  testExpSO3.cpp  testJacobiansSO3.cpp  testLogSO3.cpp  testSE3.cpp  tests.cu
